# allfollow

./: .gitignore  Cargo.toml  README.md  flake.nix  hyprnix-before.dot
nix/: default.nix  package.nix  shell.nix
nix/overlays/: default.nix  package.nix
samples/nixpkgs-follows-nixpkgs-unstable/: flake.nix
src/: cli_args.rs  dot_graph.rs  flake_lock.rs  fmt_colors.rs  main.rs
